--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -270,11 +270,11 @@
                         <form action="/api/contact" method="post" id="contact-form" role="form">
                             <div class="form-group">
                                 <input type="text" class="form-control" id="user_name" name="user_name"
-                                    placeholder="Your Name ">
+                                    placeholder="Preferred Name ">
                             </div>
                             <div class="form-group">
                                 <input type="email" class="form-control" id="your_email" name="your_email"
-                                    placeholder="You Email ">
+                                    placeholder="Contact Email ">
                             </div>
                             <div class="form-group">
                                 <textarea id="user_message" name="user_message" class="form-control" rows="5"
