fixed responsive nav flickering

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -306,18 +306,15 @@
         <!-- social -->
     </section><!-- contact -->
     <!-- Footer Area -->
-    <!--<footer>
+    <footer>
         <div class="container">
             <div class="row">
-                <div class="col-sm-6">
-                    <p class="copyright">© Copyright 2014 <a href="#" target="_blank">Your Website Link</a></p>
-                </div>
-                <div class="col-sm-6">
-                    <p class="designed">Theme by <a href="http://themewagon.com" target="_blank">Themewagon</a></p>
+                <div class="col-sm-12 text-center">
+                    <p class="designed"> Designed by me - All right reserved 2022  <a href="http://themewagon.com" target="_blank"></a></p>
                 </div>
             </div>
         </div>
-    </footer>-->
+    </footer>
     <!-- Necessery scripts -->
     <script src="assets/js/jquery-2.1.3.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
