Weather Report Feature added

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -54,10 +54,17 @@
     <section id="navigation">
         <div class="container">
             <div class="row">
-                <div class="col-xs-6">
-                    <div class="logo"><a data-scroll href="#body" class="logo-text">Bryan The Tutor</a></div>
+                <div class="col-xs-5">
+                    <div class="logo"><a data-scroll href="#body" class="logo-text"><img id="logo-image" src="/wwwroot/assets/images/Bryan-Logo.png" alt="logo" /></a></div>
                 </div>
-                <div class="col-xs-6">
+                <div class="col-xs-6 text-right">
+                        <p id="weather-info">
+                            <img id="weather-icon">
+                        </p>  
+                </div>
+                <!-- <img id="weather-icon" src="https://openweathermap.org/img/wn/10d@4x.png">     -->
+                
+                <div class="col-xs-1">
                     <div class="nav">
                         <a href="#" data-placement="bottom" title="Menu" class="menu" data-toggle="dropdown"><i
                                 class="pe-7s-menu"></i></a>
@@ -72,15 +79,14 @@
                                         class="menu-effect"></span></li>
                                 <li><a data-scroll href="#testimonial">Contact Me <i class="pe-7s-comment"></i><span
                                             class="menu-effect"></span></a></li>
-                                <!-- <li><a data-scroll href="#contact">Contact <i class="pe-7s-help1"></i></a><span class="menu-effect"></span></li> -->
                             </ul>
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
+    
     <!-- About Me -->
     <section id="about-me" class="service-area">
         <div class="container">
