update style and box shadow

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -70,16 +70,16 @@
                                 class="pe-7s-menu"></i></a>
                         <div class="dropdown-menu">
                             <div class="arrow-up"></div>
-                            <ul>
+                            <ul id="menu-ul">
                                 <li><a data-scroll href="#about-me">About me<i class="pe-7s-home"></i></a><span
                                         class="menu-effect"></span></li>
                                 <li><a data-scroll href="#services">Lesson Topics<i class="pe-7s-config"></i></a><span
                                         class="menu-effect"></span></li>
-                                <li><a data-scroll href="#portfolio">Feedback<i class="pe-7s-glasses"></i></a><span
+                                <li><a data-scroll href="#testimonial">Feedback<i class="pe-7s-glasses"></i></a><span
                                         class="menu-effect"></span></li>
-                                <li><a data-scroll href="#testimonial">Contact Me <i class="pe-7s-comment"></i><span
+                                <li><a data-scroll href="#contact">Contact Me <i class="pe-7s-comment"></i><span
                                             class="menu-effect"></span></a></li>
-                            </ul>
+                            </ul>   
                         </div>
                     </div>
                 </div>
@@ -128,8 +128,8 @@
                         <div class="service-wrap">
                             <i class="pe-7s-network pe-dj pe-va"></i>
                             <h3>Algorithm Design</h3>
-                            <p>This is the ability of understanding and dissect a problem, so that you can design
-                                appropriate input and output for the solution.
+                            <p>Ability to understand and dissect a problem in order to come up
+                                with an appropriate set of instruction as the solution
                             </p>
                         </div>
                     </div>
@@ -141,8 +141,7 @@
                             <i class="pe-7s-add-user pe-dj pe-va"></i>
                             <h3>Assignment Assist</h3>
                             <p>Finish projects on time can be a problem, due to the nature of busy lifestyle. I can
-                                save your time by
-                                tackling them together.
+                                save your time by tackling them together
                             </p>
                         </div>
                     </div>
@@ -153,8 +152,8 @@
                         <div class="service-wrap">
                             <i class="pe-7s-science pe-dj pe-va"></i>
                             <h3>Fundamental of Coding</h3>
-                            <p>Having a career change or wanting a head-start? Regardless of the purpose, I am more
-                                than welcome to join that journey with you.</p>
+                            <p>Learn how to syntactically and conceptually understand a programming block which applies to various technology industry
+                            </p>
                         </div>
                     </div>
 
@@ -164,8 +163,7 @@
                         <div class="service-wrap">
                             <i class="pe-7s-monitor pe-dj pe-va"></i>
                             <h3>Web Application</h3>
-                            <p>Have you ever wondered how web application works? We can discover all kinds of topics
-                                around this technology.</p>
+                            <p>Break into web application development industry with the most necessary full-strack skillset</p>
                         </div>
                     </div>
                 </div>
@@ -173,10 +171,8 @@
                     <div class="services">
                         <div class="service-wrap">
                             <i class="pe-7s-edit pe-dj pe-va"></i>
-                            <h3>Data Structure</h3>
-                            <p>To maximize performance of implementation, hash tables, list, queue, and other
-                                structure
-                                are the key role that developers shoud be well-versed in.</p>
+                            <h3>Data Analysis</h3>
+                            <p>Prepare data, perform statistical analysis, create visualizations, predict future trends, and more </p>
                         </div>
                     </div>
                 </div>
@@ -185,8 +181,7 @@
                         <div class="service-wrap">
                             <i class="pe-7s-config pe-dj pe-va"></i>
                             <h3>Mathematics</h3>
-                            <p>I would love to hear what problems you are struggling, then I explain the problems,
-                                and get along with your learning journey.
+                            <p>Understand mathematical concepts and get the assignment done to save your time and productivity 
                             </p>
                         </div>
                     </div>
