added image and view more button

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -14,6 +14,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name=”description” content="Programming Tutoring Service for Computer Science and Bootcamp and Web Development"/>
+    <meta name="keywords" content="programming,tutoring,math,science,tutor,computer, bootcamp, practice, software development, web development, web, development"/>
+
 
     <!-- stylesheets -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -40,6 +43,7 @@
     <!-- Header area -->
     <header id="header">
         <div class="center text-center">
+            <h1 class="SEO-Optimized" style="display: none">Tutoring Service Computer Science</h1>
             <h1 class="bigheadline">Get Inspired</h1>
             <!-- <hr style="width: 50%; "> -->
         </div>
@@ -74,7 +78,7 @@
                         <div class="dropdown-menu">
                             <div class="arrow-up"></div>
                             <ul id="menu-ul">
-                                <li><a data-scroll href="#about-me">About me<i class="pe-7s-home"></i></a><span
+                                <li><a data-scroll href="#about-me">About Me<i class="pe-7s-home"></i></a><span
                                         class="menu-effect"></span></li>
                                 <li><a data-scroll href="#services">Lesson Topics<i class="pe-7s-config"></i></a><span
                                         class="menu-effect"></span></li>
@@ -94,7 +98,7 @@
     <section id="about-me" class="service-area">
         <div class="container">
             <h2 class="block_title">About Me</h2>
-            <div class="row">
+            <div class="row about-me-div">
                 <div class="col-md-12 col-lg-6">
                     <h2 class="about-me-h3"> Hi, I am Bryan, welcome to my personal tutoring space. </h2>
                     <p class="about-me-p">
@@ -110,13 +114,13 @@
                     <ul>
                         <li>C/C#/C++ (Object-oriented Programming and Competitive Problems)</li>
                         <li>SQL, MySQL, MSSQL, MongoDB</li>
-                        <li>JavaScript, Node.js, Express, CSS, HTML, Boostrap 4/5, jQuery.</li>
+                        <li>JavaScript, Node.js, Express, CSS, HTML, Boostrap 4/5, jQuery</li>
                         <li>Python3 (Matplotlib, Pandas, Kaggle API, Machine Learning)</li>
-                        <li>Other bachelorerate-level subjects.</li>
+                        <li>Other bachelorerate-level subjects</li>
                     </ul>
                 </div>
-                <div class="col-md-12 col-lg-6 text-center hidden-xs hidden-sm">
-                    <img id="about-image" src="assets/images/intro-image-premium.jpg">
+                <div class="col-md-12 col-lg-6 text-center hidden-xs hidden-sm" style="padding: 0px;">
+                    <img id="about-image" src="assets/images/resume-pic4-enhanced.png">
                 </div>
             </div>
         </div>
@@ -238,6 +242,9 @@
                         <strong>Sandra</strong>
                         <br>
                         <small>Private Student</small>
+                    </div>
+                    <div class="testimonila-block view-more">
+                        <h1><a href="https://www.superprof.com/junior-developer-and-also-have-experience-computer-science-tutoring-python-javascript-html-css-and-any.html">View More</a></h1>                                                
                     </div>
                 </div>
             </div>
