--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -57,21 +57,21 @@
     <section id="navigation">
         <div class="container">
             <div class="row">
-                <div class="col-xs-5">
+                <div class="col-md-5 col-xs-5">
                     <div class="logo"><a data-scroll href="#body" class="logo-text"><img id="logo-image" src="assets/images/Bryan-Logo.png" alt="logo" /></a></div>
                 </div>
-                <div class="col-xs-2">
+                <div class="col-md-2 col-xs-1">
                     <h4 class="subheadline"> <span id="clock"></span> </h4>
 
                 </div>
-                <div class="col-xs-4 text-right" style="padding-right: 0px;">
+                <div class="col-md-4 col-xs-1 text-right" style="padding-right: 0px;">
                         <p id="weather-info">
                             <img id="weather-icon">
                         </p>  
                 </div>
                 <!-- <img id="weather-icon" src="https://openweathermap.org/img/wn/10d@4x.png">     -->
                 
-                <div class="col-xs-1">
+                <div class="col-md-1 col-xs-5">
                     <div class="nav">
                         <a href="#" data-placement="bottom" title="Menu" class="menu" data-toggle="dropdown"><i
                                 class="pe-7s-menu"></i></a>
