updated hidden profile pic on xs

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -119,7 +119,7 @@
                         <li>Other bachelorerate-level subjects</li>
                     </ul>
                 </div>
-                <div class="col-md-12 col-lg-6 text-center hidden-xs hidden-sm" style="padding: 0px;">
+                <div class="col-md-12 col-lg-6 text-center hidden-xs  " style="padding: 0px;">
                     <img id="about-image" src="assets/images/resume-pic4-enhanced.png">
                 </div>
             </div>
