added view more slides to carousel

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -244,6 +244,8 @@
                         <small>Private Student</small>
                     </div>
                     <div class="testimonila-block view-more">
+                        <img id="superprof-img" src="https://c.superprof.com/style/images/logos/superprof.svg" alt="super-prof-logo">
+                        <p>Want to know more about me? You can check out more reviews on my profile at SuperProf ! </p>
                         <h1><a href="https://www.superprof.com/junior-developer-and-also-have-experience-computer-science-tutoring-python-javascript-html-css-and-any.html">View More</a></h1>                                                
                     </div>
                 </div>
