--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -271,8 +271,8 @@
                             <ul class="address">
                                 <li><i class="pe-7s-map-marker"></i><span>Santa Ana, CA, 92703, United States</span>
                                 </li>
-                                <li><i class="pe-7s-mail"></i><span><a href="mailto:tutoring.bryan24399@gmail.com">tutoring.bryan24399@gmail.com</a></span></li>
-                                <li><i class="pe-7s-phone"></i><span><a href="tel:7606201605"> +1 (760) 620-1605 </a></span></li>
+                                <li><i class="pe-7s-mail"></i><span>tutoring.bryan24399@gmail.com</span></li>
+                                <li><i class="pe-7s-phone"></i><span>+1 (760) 620-1605</span></li>
                             </ul>
                         </div>
                     </div>
